# EspOtg

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-build.yml  android-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/espotg/app/: MainActivity.kt
app/src/main/kotlin/com/espotg/app/data/: DeviceProfileRepository.kt  GitHubReleaseRepository.kt
app/src/main/kotlin/com/espotg/app/data/db/: DeviceProfileEntity.kt  EspOtgDatabase.kt
app/src/main/kotlin/com/espotg/app/flash/: FlashEngine.kt
app/src/main/kotlin/com/espotg/app/ui/: AppViewModel.kt  EspOtgNavHost.kt
app/src/main/kotlin/com/espotg/app/ui/components/: EnumDropdown.kt  FlashOptionsPanel.kt  HexOffsetField.kt  LogConsole.kt  NavIcons.kt
app/src/main/kotlin/com/espotg/app/ui/connect/: ConnectScreen.kt
app/src/main/kotlin/com/espotg/app/ui/flash/: FlashScreen.kt
app/src/main/kotlin/com/espotg/app/ui/monitor/: MonitorScreen.kt
app/src/main/kotlin/com/espotg/app/ui/profiles/: ProfilesScreen.kt
app/src/main/kotlin/com/espotg/app/ui/releases/: ReleasesScreen.kt
app/src/main/kotlin/com/espotg/app/ui/theme/: Theme.kt
app/src/main/kotlin/com/espotg/app/usb/: UsbDeviceRepository.kt  UsbPortCoordinator.kt  UsbSerialForAndroidTransport.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml
flasher-core/: build.gradle.kts
flasher-core/src/main/kotlin/com/espotg/core/: ChipIdentity.kt  DeviceFirmwareInfo.kt  EspBinaryInfo.kt  EspLoaderError.kt  EspPartitionTable.kt  FlashEntry.kt  FlashOptions.kt  FlashProgress.kt  HexOffset.kt  TargetChip.kt
flasher-core/src/main/kotlin/com/espotg/core/github/: GitHubClient.kt  GitHubModels.kt
flasher-core/src/test/kotlin/com/espotg/core/: EspBinaryInfoTest.kt  FlashProgressTest.kt  HexOffsetTest.kt
flasher-core/src/test/kotlin/com/espotg/core/github/: GitHubClientTest.kt
flasher-native/: build.gradle.kts  consumer-rules.pro
flasher-native/src/main/: AndroidManifest.xml
flasher-native/src/main/cpp/: CMakeLists.txt  android_port.c  android_port.h  jni_bridge.c
flasher-native/src/main/kotlin/com/espotg/flasher/: EspLoaderNative.kt  UsbSerialTransport.kt
gradle/: libs.versions.toml
scripts/: setup-sdk.sh
